<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Title -->

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <!-- Type -->

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/type_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/type"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:prompt="@string/spinner_prompt"
        android:entries="@array/event_type_list"/>

    <!-- Date and Time -->

    <TextView
        android:id="@+id/date_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/type"
        android:layout_below="@id/type"
        android:layout_marginTop="16dp"
        android:text="@string/date_string"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/date_string"
        android:layout_alignTop="@id/date_string"
        android:layout_marginStart="12dp"
        android:text="@string/no_date_set_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/date"
        android:layout_alignStart="@+id/time_picker_button"
        android:layout_below="@id/type"
        android:text="@string/change_date_string" />

    <TextView
        android:id="@+id/time_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/date_string"
        android:layout_below="@id/date_picker_button"
        android:layout_marginTop="8dp"
        android:text="@string/time_string"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/time_string"
        android:layout_below="@id/date_picker_button"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/no_time_set_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/time"
        android:layout_marginStart="10dp"
        android:layout_below="@id/date_string"
        android:layout_marginTop="4dp"
        android:text="@string/change_time_string" />

    <!-- Priority -->

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/type"
        android:layout_below="@id/time"
        android:layout_marginTop="16dp"
        android:text="@string/priority_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/priority_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/priority"
        android:layout_below="@id/time"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:layout_marginStart="5dp"/>

    <!-- Details -->
    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_details_string"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:gravity="top|start"
        android:maxLines="10"
        android:layout_marginTop="12dp"
        android:layout_below="@id/priority"
        android:layout_alignParentStart="true"/>

</RelativeLayout>